# linkml-pydantic

./: README.md  pyproject.toml  tox.ini
linkml_pydantic/: __init__.py  importer.py
tests/: conftest.py  test_importer.py
tests/input/schema_module/: core.yaml  kitchen_sink.yaml
