[tool.poetry]
name = "linkml-pydantic"
version = "0.1.0"
description = "Runtime package for LinkML Pydantic models"
authors = ["sneakers-the-rat <sneakers-the-rat@protonmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
linkml = { git = "https://github.com/sneakers-the-rat/linkml", branch="pydanticgen-metadata" }

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
tox = "^4.14.2"

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311"]
force-exclude = '''
/(
  # default exclude
  \.direnv|\.eggs|\.git|\.hg|\.ipynb_checkpoints|\.mypy_cache|\.nox|\.pytest_cache|\.ruff_cache|\.tox|\.svn|\.venv|\.vscode|__pypackages__|_build|buck-out|build|dist|venv
  # additional exclude
  | __snapshots__
  | docs
  | examples
  | notebooks
)/
'''

[tool.pytest.ini_options]
filterwarnings = [
  # https://github.com/RDFLib/rdflib/issues/1830
  "ignore:.*_pytestfixturefunction is not defined in namespace:UserWarning"
]

[tool.ruff]
extend-exclude = [
    "tests/**/__snapshots__",
    "examples/",
    "docs/",
    "notebooks/"
]
force-exclude = true
line-length = 120
extend-ignore = ["E203"]
select = [
  "E",  # pycodestyle errors
  "F",  # Pyflakes
  "I",  # isort
]
# Assume Python 3.8
target-version = "py38"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
